k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amp-portops-service
  namespace: amp-portops
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: amp-portops-api
