k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amp-portops-ingress
  namespace: amp-portops
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
spec:
  tls:
    - hosts:
        - portops.amp.gob.pa
      secretName: amp-portops-tls-cert
  rules:
    - host: portops.amp.gob.pa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amp-portops-service
                port:
                  number: 8000
